<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <android.support.v7.widget.Toolbar
            android:id="@+id/tb_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/half_yellow"
            app:navigationIcon="@drawable/ic_action_back"
            app:title="@string/registerPage"
            app:titleTextColor="@color/half_blue"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/black"
            android:layout_margin="1dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="60dp">
            <TextView
                android:id="@+id/tv_idHint"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:gravity="center"
                android:text="@string/yourId"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/et_registerUserId"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/tv_idHint"
                android:hint="@string/idHint"
                android:inputType="text"
                android:gravity="start|center"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <TextView
                android:id="@+id/tv_pwHint"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:gravity="center"
                android:text="@string/yourPassword"
                android:textColor="@color/black"
                android:textSize="22sp" />
            <EditText
                android:id="@+id/et_registerPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/tv_pwHint"
                android:hint="@string/pwdHint"
                android:inputType="textPassword"
                android:maxLength="20"
                android:gravity="start|center"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp" >
            <TextView
                android:id="@+id/tv_nameHint"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:gravity="center"
                android:text="@string/yourName"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/et_registerUserName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/tv_nameHint"
                android:inputType="text"
                android:hint="@string/nameHint"
                android:gravity="start|center"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp" >
            <TextView
                android:id="@+id/tv_pwdProtectQ"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:gravity="center"
                android:text="@string/pwdProtectQ"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <Spinner
                android:id="@+id/sp_pwdProtectC"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/tv_pwdProtectQ"
                android:spinnerMode="dialog"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp" >
            <TextView
                android:id="@+id/tv_pwdProtectA"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:gravity="center"
                android:text="@string/pwdProtectA"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/et_pwdProtectA"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/tv_pwdProtectA"
                android:hint="@string/pwdPtAHint"
                android:inputType="text"
                android:gravity="start|center"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"/>
        </RelativeLayout>
        <Button
            android:id="@+id/btn_registerConfirm"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/half_yellow"
            android:text="@string/register_button"
            android:textColor="@color/black"
            android:textSize="22sp"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>