<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/warm_background"
    tools:context=".fragment.MyInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:elevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal"
                android:background="@color/warm_orange_light"
                android:gravity="center_vertical"
                android:padding="12dp">

                <ImageView
                    android:id="@+id/iv_headImage"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_head_image"
                    android:contentDescription="@string/icon"
                    android:padding="1dp"/>

                <TextView
                    android:id="@+id/tv_userName"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="8"
                    android:text="@string/userName"
                    android:gravity="center_vertical"
                    android:textColor="@color/warm_text"
                    android:textSize="20sp"
                    android:padding="1dp"
                    android:layout_marginLeft="12dp"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/warm_text"
                    android:layout_margin="3dp"/>

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:text="@string/login_button1"
                    android:layout_gravity="end|center"
                    android:textSize="16sp"
                    android:textColor="@color/warm_text"
                    android:padding="3dp"
                    android:background="@drawable/button_warm_selector"
                    android:elevation="4dp"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/btn_changeMyName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="start|center"
            android:text="@string/changeUserName"
            android:textSize="18sp"
            android:textColor="@color/warm_text"
            android:background="@drawable/button_warm_selector"
            android:paddingLeft="24dp"
            android:layout_marginBottom="12dp"
            android:elevation="4dp"/>

        <Button
            android:id="@+id/btn_changePassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="start|center"
            android:text="@string/changePassword"
            android:textSize="18sp"
            android:textColor="@color/warm_text"
            android:background="@drawable/button_warm_selector"
            android:paddingLeft="24dp"
            android:layout_marginBottom="12dp"
            android:elevation="4dp"/>

        <Button
            android:id="@+id/btn_addFriend"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="start|center"
            android:text="@string/addFriendByName"
            android:textSize="18sp"
            android:textColor="@color/warm_text"
            android:background="@drawable/button_warm_selector"
            android:paddingLeft="24dp"
            android:layout_marginBottom="12dp"
            android:elevation="4dp"/>

        <Button
            android:id="@+id/btn_displayFriends"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="start|center"
            android:text="@string/displayFriends"
            android:textSize="18sp"
            android:textColor="@color/warm_text"
            android:background="@drawable/button_warm_selector"
            android:paddingLeft="24dp"
            android:layout_marginBottom="12dp"
            android:elevation="4dp"/>

        <Button
            android:id="@+id/btn_settings"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="start|center"
            android:text="@string/settings"
            android:textSize="18sp"
            android:textColor="@color/warm_text"
            android:background="@drawable/button_warm_selector"
            android:paddingLeft="24dp"
            android:elevation="4dp"/>

    </LinearLayout>

</FrameLayout>