<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="10dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:src="@drawable/icon"
            android:contentDescription="@string/icon"/>
        <EditText
            android:id="@+id/et_userId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/yourId"
            android:gravity="left|center"
            android:inputType="text"
            android:maxLines="1"
            android:maxLength="20"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"/>
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:gravity="left|center"
            android:hint="@string/yourPassword"
            android:inputType="textPassword"
            android:maxLength="20"
            android:maxLines="1"/>
        <CheckBox
            android:id="@+id/cb_isRememberPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="记住密码"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_margin="5dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/black"
            android:layout_margin="1dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <Button
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:background="@color/transparent"
                android:text="@string/register_button"
                android:textSize="16sp"
                android:textColor="@color/half_blue"
                android:layout_alignParentBottom="true"/>
            <Button
                android:id="@+id/btn_loginConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@color/yellow"
                android:text="@string/login_button"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_margin="3dp"/>
            <Button
                android:id="@+id/btn_forgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@color/transparent"
                android:text="@string/forgetPwd_button"
                android:textSize="16sp"
                android:textColor="@color/half_blue"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>