<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPwdActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.Toolbar
            android:id="@+id/tb_forgetPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/half_yellow"
            app:navigationIcon="@drawable/ic_action_back"
            app:title="@string/forgetPwdPage"
            app:titleTextColor="@color/half_blue"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/black"
            android:layout_margin="1dp"/>
        <TextView
            android:id="@+id/tv_yourId"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:textSize="22sp"
            android:textColor="@color/black"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/black"
            android:layout_margin="3dp"/>
        <TextView
            android:id="@+id/tv_pwdProtectQ"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="22sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/black"
            android:layout_margin="3dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp" >
            <TextView
                android:id="@+id/tv_pwdProtectA"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:gravity="center"
                android:text="@string/pwdProtectA"
                android:textColor="@color/black"
                android:textSize="22sp" />
            <EditText
                android:id="@+id/et_pwdProtectA"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toEndOf="@+id/tv_pwdProtectA"
                android:hint="@string/pwdPtAHint"
                android:gravity="start|center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>
        </RelativeLayout>
        <Button
            android:id="@+id/btn_textA"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/half_yellow"
            android:text="@string/testA"
            android:textColor="@color/black"
            android:textSize="22sp"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>