<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FriendsInfoActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.Toolbar
            android:id="@+id/tb_friendsInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/half_yellow"
            app:navigationIcon="@drawable/ic_action_back"
            app:title="@string/back"
            app:titleTextColor="@color/half_blue" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/black"
            android:layout_margin="1dp"/>
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_head_image"
            android:layout_margin="5dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/black"
            android:layout_margin="1dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/yourId"
                android:textSize="18sp"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/tv_idInfo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:textSize="18sp"
                android:textColor="@color/black"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/black"
            android:layout_margin="1dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/yourName"
                android:textSize="18sp"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/tv_nameInfo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:textSize="18sp"
                android:textColor="@color/black"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/black"
            android:layout_margin="1dp"/>
        <CheckBox
            android:id="@+id/cb_isReceiveLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="接受该好友的位置"
            android:textSize="18sp"
            android:textColor="@color/black"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/black"
            android:layout_margin="1dp"/>
        <Button
            android:id="@+id/btn_sendMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:typeface="monospace"
            android:background="@color/transparent"
            android:text="发消息"
            android:textSize="18sp"
            android:textColor="@color/blue"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/black"
            android:layout_margin="1dp"/>
        <Button
            android:id="@+id/btn_deleteFriends"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:typeface="monospace"
            android:background="@color/transparent"
            android:text="解除好友关系"
            android:textSize="18sp"
            android:textColor="@color/blue"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>